z-index fix

--- a/frontend/src/Dashboard/AdminPanel/component/sidebar.css
+++ b/frontend/src/Dashboard/AdminPanel/component/sidebar.css
@@ -30,6 +30,7 @@
 .sidebar{
     min-height: 100vh;
     position: fixed;
+    z-index: 999;
 }
 
 .navigation-section .logo{
